--- a/简书目录.md
+++ b/简书目录.md
@@ -29,15 +29,11 @@
 # 七、架构师之路
 * [Android编译时注解APT的使用](https://www.jianshu.com/p/2d6fdbb6ead2) 
 
-# 八、Framework
-* [part01_搭建ubuntu14.04与Android源码级开发环境](https://www.jianshu.com/p/e55bb638ed3d) 
-* [part02_驱动下载安装和AOSP编译](https://www.jianshu.com/p/6d5b727571ab) 
-
-# 九、Linux
+# 八、Linux
 * [阿里云ubuntu服务器环境搭建（纯干货）](https://www.jianshu.com/p/f921491d681e) 
 * [NDK历史版本下载](https://www.jianshu.com/p/d5c168208f92) 
 
-# 十、C语言基础
+# 九、C语言基础
 * [ndk01.1_C简单语法，数组的定义](https://www.jianshu.com/p/dd3ae258eabe) 
 * [ndk01.2_指针，外挂原理](https://www.jianshu.com/p/b270e8b3bfe3) 
 * [ndk02_指针运算，函数参数与指针，数组指针，二级指针](https://www.jianshu.com/p/316fceaca61c) 
@@ -45,7 +41,7 @@
 * [ndk04_结构体,typedef,公用体,枚举](https://www.jianshu.com/p/5531d3952059) 
 * [ndk05_文件操作，文件加解密，预处理](https://www.jianshu.com/p/de097204fa55) 
 
-# 十一、JNI
+# 十、JNI
 * [ndk06_jni开发流程，JNIEnv，jni访问java变量](https://www.jianshu.com/p/16cfa39b6d23) 
 * [ndk07_JNI访问java方法，访问java构造，字符串的转换](https://www.jianshu.com/p/0098a8002a9f) 
 * [ndk08_JNI数组(快速排序)，引用，异常处理，缓存策略](https://www.jianshu.com/p/106f1341c443) 
@@ -56,14 +52,18 @@
 - [javah命令的使用](https://www.jianshu.com/p/19e42446b10e) 
 - [C语言中打印log到android控制台](https://www.jianshu.com/p/620861484ab4) 
 
-# 十二、CMake编译
+# 十一、CMake编译
 * [Part01_CMakeLists构建管理多个模块的C代码](https://www.jianshu.com/p/e1a96509d8da) 
 * [Part02_CMakeLists引用源文件的3种方式](https://www.jianshu.com/p/ffd475455f63) 
 * [Part03_CMakeLists查找指定目录下所有源文件时引发的bug](https://www.jianshu.com/p/3069a6e1d9f6) 
 
-# 十三、FFmpeg
+# 十二、FFmpeg
 - [part01_Linux下使用Cmake构建工程](https://www.jianshu.com/p/a7c88b7a9020) 
 - [part02_编译android平台使用的FFmpeg动态库](https://www.jianshu.com/p/14be44fdfa6e) 
 - [part03_牛刀小试_视频解码原理-使用ffmpeg将MP4转YUV420P](https://www.jianshu.com/p/ca83254acec4) 
 - [part04_ffmpeg+native_window实现万能视频播放器播放本地视频](https://www.jianshu.com/p/7a165b9f9fad) 
 - [part05_ffmpeg实现本地音频转码pcm输出](https://www.jianshu.com/p/806635f2d6cb) 
+
+# 十三、Framework
+* [part01_搭建ubuntu14.04与Android源码级开发环境](https://www.jianshu.com/p/e55bb638ed3d) 
+* [part02_驱动下载安装和AOSP编译](https://www.jianshu.com/p/6d5b727571ab) 
