--- a/简书目录.md
+++ b/简书目录.md
@@ -27,7 +27,9 @@
 * [从根源处解决androidStudio打开项目进程卡死的问题](https://www.jianshu.com/p/fc6181c1d29c) 
 
 # 七、架构师之路
-* [Android编译时注解APT的使用](https://www.jianshu.com/p/2d6fdbb6ead2) 
+* [part01_Gradle常用语法](https://www.jianshu.com/p/cebba6b185c5) 
+* [part02_Android组件化配置](https://www.jianshu.com/p/5f9a7bc902e1) 
+* [part03_Android编译时注解APT的使用](https://www.jianshu.com/p/2d6fdbb6ead2) 
 
 # 八、Linux
 * [阿里云ubuntu服务器环境搭建（纯干货）](https://www.jianshu.com/p/f921491d681e) 
