--- a/简书目录.md
+++ b/简书目录.md
@@ -30,6 +30,9 @@
 * [part01_Gradle常用语法](https://www.jianshu.com/p/cebba6b185c5) 
 * [part02_Android组件化配置](https://www.jianshu.com/p/5f9a7bc902e1) 
 * [part03_Android编译时注解APT的使用](https://www.jianshu.com/p/2d6fdbb6ead2) 
+* [part04_Rxjava入门](https://www.jianshu.com/p/88e368311f8b) 
+* [part05_Rxjava操作符](https://www.jianshu.com/p/afeba5aea533) 
+* [part06_Rxjava背压原理](https://www.jianshu.com/p/23f74055e999) 
 
 # 八、Linux
 * [阿里云ubuntu服务器环境搭建（纯干货）](https://www.jianshu.com/p/f921491d681e) 
