--- a/简书目录.md
+++ b/简书目录.md
@@ -13,6 +13,7 @@
 * [跨进程通信(AndroidStudio上使用AIDL)](https://www.jianshu.com/p/fc7c07099943) 
 * [混合开发js与Andorid互调](https://www.jianshu.com/p/ab588ffaa40b)
 * [opengl 简化版 Camera的使用](https://www.jianshu.com/p/835c058704d0) 
+* [深入理解Handler 消息机制](https://www.jianshu.com/p/caddc137e11e) 
 
 # 三、自定义控件
 * [使用ExpandableListView纯手工打造带折叠动画的多条目展示框架](https://www.jianshu.com/p/d7de86838d1e) 
